agregando nuevas secciones y maquetando

--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,7 @@
     grid-area: header;
     background: linear-gradient(90deg, rgba(0,0,36,0.011642156862745057) 8%, rgba(212,23,221,1) 49%, rgba(209,72,197,0.23853291316526615) 86%);
 }
-.logo{
-    max-width: 200px;
-}
+
 .menuenlinea{
     font-size: large;
     font-weight: 100;
@@ -107,4 +105,31 @@ a {
 /* botstrap alimentos */
 .marcas{
     max-width: 200px;
+}
+.logo{
+    max-width: 400px;
+}
+/* accesorios con grid */
+.gridaccesorio{
+    display: grid;
+    grid-template-areas: 
+    "header"
+    "main"
+    "footer"; 
+}
+.header{
+    grid-area: header;
+    background: linear-gradient(90deg, rgba(0,0,36,0.011642156862745057) 8%, rgba(212,23,221,1) 49%, rgba(209,72,197,0.23853291316526615) 86%);
+}
+.logo{
+    max-width: 200px;
+}
+.menuenlinea{
+    font-size: large;
+    font-weight: 100;
+    font-style: italic;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
