--- a/css/style.css
+++ b/css/style.css
@@ -14,11 +14,7 @@
 }
 
 
-.main{
-    grid-area: main;
-    background-image: url("../logo-firulais-img/IMG_20220610_101400387.jpg");
-    height: 1000px;
-}
+
 .mensajebienvenida{
     font-size: 50px;
     font-style: oblique;
@@ -42,18 +38,7 @@
     max-width: 450px;
     margin: auto
 }   
-.footer{
-    font-size: large;
-    font-style: italic;
-    font-weight: 100;
-    grid-area: footer;
-    background: linear-gradient(90deg, rgba(0,0,36,0.011642156862745057) 8%, rgba(212,23,221,1) 49%, rgba(209,72,197,0.23853291316526615) 86%);
-    display: flex;
-    flex-direction: column;
-    justify-self: center;
-    align-content: center;
-    align-items: center;
-} */
+
 
 /* botstrap index */
 a {
@@ -104,6 +89,7 @@ a {
     "header"
     "main"
     "footer"; 
+    
 }
 .header{
     grid-area: header;
@@ -112,12 +98,80 @@ a {
 .logo{
     max-width: 200px;
 }
+.logogrid{
+    max-width: 175px;
+}
 .menuenlinea{
-    font-size: large;
-    font-weight: 100;
-    font-style: italic;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
 }
+.lif{
+    list-style: none;
+    font-size: 5mm;
+    font-family: georgia;
+    font-style: normal;
+    color: black;
+}
+.main{
+    grid-area: main;
+    background: linear-gradient(90deg, rgba(0,0,36,0.011642156862745057) 8%, rgba(212,23,221,1) 49%, rgba(209,72,197,0.23853291316526615) 86%);
+}
+.seleccionalimentos{
+    font-size: 10mm;
+    font-family: 'Times New Roman';
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 15px;
+}
+.imagenes{
+ display: flex;
+ flex-direction: row;
+ flex-wrap: wrap;
+justify-content: space-around;
+}
+.puntos{
+    list-style: none;
+}
+.footer{
+    grid-area: footer;
+    background: linear-gradient(90deg, rgba(0,0,36,0.011642156862745057) 8%, rgba(212,23,221,1) 49%, rgba(209,72,197,0.23853291316526615) 86%);
+ }
+    
+   .redes{
+    font-size: 5mm;
+    font-family: Georgia;
+    font-style: normal;
+    display: flex; 
+    flex-direction: row;
+    justify-content: space-around;
+   }
+   /* estetica con grid */
+   .gridestetica{
+    display: grid;
+    grid-template-areas: 
+    "header"
+    "main"
+    "footer";
+   }
+   .servicios{
+    font-size: 10mm;
+    font-family: 'Times New Roman';
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 15px;
+   }
+   .seccionservicios{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-items: auto;
+   }
+
+
+    
